--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <!--<link href="css/fontawesome.min.css" rel="stylesheet">-->
   <link href="css/slick.css" rel="stylesheet">
+  <link href="css/magnific-popup.css" rel="stylesheet">
   <link href="css/slick-theme.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
 </head>
@@ -198,7 +199,7 @@
     </div>
   </div>
 </section>
-<div class="icons-row">
+<div class="icons-row d-none d-md-block">
   <div class="container ">
     <div class="row">
       <div class="col-12 icons">
@@ -212,7 +213,7 @@
     <div class="row">
       <div class="col-12"><h2 class="bottom-line">Суть бизнеса автозапчастей</h2></div>
     </div>
-    <div class="row pt-3">
+    <div class="row pt-0 pt-md-3">
       <div class="col-md-8">
         <p class="subtitle">По сути со стороны может показаться, что владение автомагазином это нечто похожее на
           стандартную схему: склад + точка продаж. Но вряд ли это можно назвать инвестиционным проектом, количество
@@ -227,7 +228,7 @@
         <div class="qote__subtitle">Остальное мы дадим!</div>
       </div>
     </div>
-    <div class="row pt-5">
+    <div class="row pt-15 pt-md-5">
       <div class="col-md-6">
         <div class="essence__video">
           <img src="/img/video2.jpg" alt="видео" width="540">
@@ -243,7 +244,7 @@
             <a href="" class="essence__name-social-link">vk</a>
           </span>
         </div>
-        <p class="grey-text">Сооснователь и соучредитель сети фирменных
+        <p class="grey-text sm-text-black">Сооснователь и соучредитель сети фирменных
           магазинов автозапчастей «Руль», 31 год</p>
         <p class="essence__right-col-text">Правильная бизнес-стратегия за 8 лет превратила магазин с наличием 450 тысяч
           рублей в сеть магазинов с
@@ -253,9 +254,9 @@
           <li class="essence__item">Спикер форума «Ты — предприниматель» 2015 — 2017</li>
           <li class="essence__item">Победитель конкурса такой-то</li>
         </ul>
-        <div class="d-flex justify-content-between pt-2">
-          <button>Хочу пахать</button>
-          <a href="#" type="tell" class="phone-number  phone-number--black">8 910 355-36-12</a>
+        <div class="d-flex flex-wrap justify-content-between flex-md-nowrap  pt-2">
+          <button class="essence__buttn">Хочу пахать</button>
+          <a href="#" type="tell" class="phone-number essence__phone-number phone-number--black">8 910 355-36-12</a>
         </div>
       </div>
     </div>
@@ -278,7 +279,7 @@
           Мы торгуем автозапчастями для иномарок всех популярных моделей и не ограничиваемся сегментом
           иномарками одной страны, мы мультибрендовый магазин. В наше время, учитывая сложную политическую ситуацию, это
           является неоспоримым преимуществом на данном рынке.</p>
-        <p class="subtitle pt-md-0"> Мы работаем только с проверенными и надежными поставщиками, мы уверены за качество
+        <p class="subtitle pt-0"> Мы работаем только с проверенными и надежными поставщиками, мы уверены за качество
           нашего товара.
         </p>
       </div>
@@ -778,59 +779,59 @@
 </section>
 <div class="fluid-gallery">
   <div class="container-fluid">
-    <div class="row slick-slider pb-30">
-      <div class="col-md-3">
+    <div class="row popup-gallery  slick-slider pb-30">
+      <a href="/img/video2@2x.jpg"  class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
+      </a>
     </div>
   </div>
 </div>
 <div class="fluid-gallery">
   <div class="container-fluid">
-    <div class="row slick-slider">
-      <div class="col-md-3">
+    <div class="row popup-gallery  slick-slider pb-30">
+      <a href="/img/video2@2x.jpg"  class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
+      </a>
     </div>
   </div>
 </div>
-<div class="">
+<div>
   <div class="container">
     <div class="row">
       <div class="col-md-6">
@@ -1186,55 +1187,55 @@
 </div>
 <div class="fluid-gallery">
   <div class="container-fluid">
-    <div class="row slick-slider pb-30">
-      <div class="col-md-3">
+    <div class="row popup-gallery  slick-slider pb-30">
+      <a href="/img/video2@2x.jpg"  class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
+      </a>
     </div>
   </div>
 </div>
 <div class="fluid-gallery">
   <div class="container-fluid">
-    <div class="row slick-slider">
-      <div class="col-md-3">
+    <div class="row popup-gallery  slick-slider pb-30">
+      <a href="/img/video2@2x.jpg"  class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
-      <div class="col-md-3">
+      </a>
+      <a href="/img/video2@2x.jpg" class="col-md-3">
         <img src="/img/video2.jpg" alt="фото">
-      </div>
+      </a>
     </div>
   </div>
 </div>
@@ -1249,6 +1250,7 @@
 </footer>
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/slick.min.js"></script>
+<script src="js/jquery.magnific-popup.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
 </body>
