разметка мобильной версии

--- a/index.html
+++ b/index.html
@@ -417,9 +417,9 @@
         <p class="pt-30 pl-30">Кроме этого, после успешных переговоров и подписания документов, мы разработаем
           планировочное решение торгового зала и склада, дадим рекомендации по ремонту,
           подскажем как не ошибиться в выборе подрядчика. </p>
-        <div class="d-flex pt-30">
-          <div class="col-md-6 get__image-warehouse"><img src="/img/get1.jpg" alt="фото" width="350"></div>
-          <div class="col-md-6"><img src="/img/get2.jpg" alt="фото" width="290"></div>
+        <div class="d-flex flex-wrap flex-md-nowrap pt-30">
+          <div class="col-12 col-md-6 get__image-warehouse"><img src="/img/get1.jpg" alt="фото" width="350"></div>
+          <div class="col-12 col-md-6 mt-3"><img src="/img/get2.jpg" alt="фото" width="290"></div>
         </div>
         <p class="subtitle--bold">В итоге, после проведения косметических ремонтных работ, вы получите готовые
           торговые и складские площади для начала деятельности ритейлера автозапчастей. </p>
@@ -432,7 +432,7 @@
             вас обмануть.
           </div>
         </div>
-        <p class="pl-30 pr-30 pb-30 text-center">Если у вас уже есть собственное
+        <p class="pl-sm-15 pr-sm-15 pl-30 pr-30 pb-30 text-center">Если у вас уже есть собственное
           помещение или вы в процессе
           подписание документов, отправьте нам заявку и мы составим вам предвариельную смету на ваш будущий
           магазин. </p>
@@ -454,7 +454,7 @@
       <div class="col-md-4 installation-top__right-col">
         <h3 class="pb-30 ">Вы получите свой
           магазин «Под ключ»</h3>
-        <button>Запросить смету</button>
+        <button class="d-none d-md-block">Запросить смету</button>
       </div>
     </div>
     <div class="row installation-bottom">
@@ -506,10 +506,10 @@
       </div>
     </div>
     <div class="row installation__buttons">
-      <div class="col-md-4 offset-2">
-        <button class="ml-30">Запросить смету</button>
+      <div class="col-12 col-md-4 offset-0 offset-md-2 pl-sm-30 pr-sm-30">
+        <button class="ml-30 installation__btn">Запросить смету</button>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 d-none d-md-block">
         <button class="btn-white mr-30">Узнать подробнее</button>
       </div>
     </div>
@@ -687,31 +687,31 @@
       </div>
     </div>
     <div class="row presentation__list">
-      <div class="col-md-2 presentation__item">
+      <div class="col-6 mb-sm-15 col-md-2 presentation__item">
         <img src="/img/presentation/presentation1.jpg" class="presentation__img" width="164" alt="img">
       </div>
-      <div class="col-md-2 presentation__item">
+      <div class="col-6 mb-sm-15 col-md-2 presentation__item">
         <img src="/img/presentation/presentation2.jpg" class="presentation__img" width="164" alt="img">
       </div>
-      <div class="col-md-2 presentation__item">
+      <div class="col-6 mb-sm-15 col-md-2 presentation__item">
         <img src="/img/presentation/presentation3.jpg" class="presentation__img" width="164" alt="img">
       </div>
-      <div class="col-md-2 presentation__item">
+      <div class="col-6 mb-sm-15 col-md-2 presentation__item">
         <img src="/img/presentation/presentation4.jpg" class="presentation__img" width="164" alt="img">
       </div>
-      <div class="col-md-2 presentation__item">
+      <div class="col-6 mb-sm-15 col-md-2 presentation__item">
         <img src="/img/presentation/presentation5.jpg" class="presentation__img" width="164" alt="img">
       </div>
-      <div class="col-md-2 presentation__item">
+      <div class="col-6 mb-sm-15 col-md-2 presentation__item">
         <img src="/img/presentation/presentation6.jpg" class="presentation__img" width="164" alt="img">
       </div>
     </div>
-    <div class="row pt-30">
-      <div class="col-md-5">
-        <button>Заказать презентацию системы</button>
+    <div class="row pt-30 pt-sm-15">
+      <div class="col-md-5 ">
+        <button class="presentation-btn">Заказать презентацию системы</button>
       </div>
       <div class="col-md-4">
-        <div class="pl-15">
+        <div class="presentation__condition">
           Доступно только для покупателей
           франшизы «Руль»
         </div>
@@ -722,7 +722,7 @@
 <section class="personal">
   <div class="container">
     <div class="row">
-      <div class="col-md-8">
+      <div class="col-12 col-md-8">
         <h2 class="bottom-line">
           Закроем раз и навсегда
           вопрос с персоналом
@@ -743,7 +743,7 @@
           подготовленный и отточенный для решения такой задачи. Но, тем не мнее, мы можем провести Skype-собеседование и
           набрать для вас «Команду мечты» на время старта. </p>
       </div>
-      <div class="col-md-4 personal-aside">
+      <div class="col-12 col-md-4 personal-aside">
         <div class="personal-aside__wrapper">
           <h3>Обучим не только
             персонал, но и вас
@@ -831,11 +831,11 @@
     </div>
   </div>
 </div>
-<div>
+<div class="d-none d-md-block">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <button>Получить коммерческое предложение</button>
+        <button class="ml-sm-1 pr-sm-1">Получить коммерческое предложение</button>
       </div>
     </div>
   </div>
@@ -857,30 +857,30 @@
           в Эксклюзивную и ценнейшую
           Базу знаний «Руль»</h2>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 d-none d-md-block">
         <img src="/img/icons/lock-yellow.png" class="data-base__lock" alt="фото замка">
       </div>
     </div>
     <div class="row pt-30 pb-30">
-      <div class="col-md-3">
+      <div class="col-6 col-md-3 data-base__item">
         <div class="data-base__number">35</div>
         <div class="data-base__description">Документов для работы магазина: договора, приказы, шаблоны, инструкции
           и так далее.
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-6 col-md-3 data-base__item">
         <div class="data-base__number">289</div>
         <div class="data-base__description">Шаблона для полиграфии, визитки, рекламные макеты, таблички, вывески,
           наклейки, листовки, баннеры.
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-6 col-md-3 data-base__item">
         <div class="data-base__number">7</div>
         <div class="data-base__description">Финансовых таблиц для прогнозирования прибыли, анализа маркетинговых каналов
           и прочее.
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-6 col-md-3 data-base__item">
         <div class="data-base__number">58</div>
         <div class="data-base__description">Видео-мастер классов, в которых мы расскажем как работать в CRM, как
           руководить магазином, как
@@ -888,7 +888,7 @@
         </div>
       </div>
     </div>
-    <div class="row pt-30">
+    <div class="row pt-30 d-none d-md-block">
       <div class="col-md-6 offset-2">
         <button>Получить коммерческое предложение</button>
       </div>
@@ -903,28 +903,28 @@
     <div class="row">
       <div class="col-md-6 pr-30">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-3 col-md-3">
             <img src="/img/brands/chevrole.png" width="98" alt="картинка марки">
           </div>
-          <div class="col-md-3">
+          <div class="col-3 col-md-3">
             <img src="/img/brands/tayota.png" width="102" alt="картинка марки">
           </div>
-          <div class="col-md-3">
+          <div class="col-3 col-md-3">
             <img src="/img/brands/mitsu.png" width="68" alt="картинка марки">
           </div>
-          <div class="col-md-3">
+          <div class="col-3 col-md-3">
             <img src="/img/brands/opel.png" width="86" alt="картинка марки">
           </div>
-          <div class="col-md-3">
+          <div class="col-3 col-md-3">
             <img src="/img/brands/hunday.png" width="97" alt="картинка марки">
           </div>
-          <div class="col-md-3">
+          <div class="col-3 col-md-3">
             <img src="/img/brands/ww.png" width="68 " alt="картинка марки">
           </div>
-          <div class="col-md-3">
+          <div class="col-3 col-md-3">
             <img src="/img/brands/ford.png" width="101" alt="уартинка марки">
           </div>
-          <div class="col-md-3">
+          <div class="col-3 col-md-3">
             <img src="/img/brands/kia.png" width="81" alt="уартинка марки">
           </div>
         </div>
@@ -979,7 +979,7 @@
   <div class="plan__top-wrapper">
     <div class="container">
       <div class="row">
-        <div class="col-md-8 offset-2">
+        <div class="col-md-8 offset-0 offset-md-2">
           <div class="plan__suptittle">Предоставляем вам:</div>
           <h2 class="plan__title">Пошаговый план
             открытия</h2>
@@ -988,7 +988,7 @@
       </div>
     </div>
   </div>
-  <button class="plan-btn">Запросить смету на открытие</button>
+  <button class="plan-btn d-none d-md-block">Запросить смету на открытие</button>
 </section>
 <section class="promotion">
   <div class="container">
@@ -996,7 +996,7 @@
       <div class="col-md-12 pb-30">
         <h2 class="bottom-line">Помогаем с продвижением</h2>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 promotion__item">
         <div class="d-flex flex-column">
           <img src="/img/promotion/b1.jpg" width="350" alt="фото банера">
           <h4>Разрабатываем макеты</h4>
@@ -1009,7 +1009,7 @@
             потребоваться. </p>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 promotion__item">
         <div class="d-flex flex-column">
           <img src="/img/promotion/b2.jpg" width="350" alt="фото банера">
           <h4>Рисуем приветственные экраны</h4>
@@ -1024,7 +1024,7 @@
             подборе запчастей.</p>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 promotion__item">
         <div class="d-flex flex-column">
           <img src="/img/promotion/b3.jpg" width="350" alt="">
           <h4>Даём все, что нужно для ведения социальных сетей</h4>
