--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,7 @@
 <div class="form pt-30">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 offset-3">
+      <div class="col-md-6 offset-0 offset-md-3">
         <form id="contactForm">
           <p class="text-center mb-30">Отправьте заявку на получение подробного коммерческого предложения, мы вышлем вам
             смету на открытие магазинов в различных фарматах, с различными объемами инвестиций.</p>
