--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 <section class="chains-stores">
   <div class="container">
     <div class="row chains-stores__top">
-      <div class="col-md-8">
+      <div class="col-md-12 col-lg-8">
         <h2 class="bottom-line">Сеть магазинов
           автозапчастей «Руль»</h2>
         <p class="subtitle">Сеть магазинов автозапчастей руль «Руль» основана в 2008 году в городе Липецке, с населением
@@ -186,7 +186,7 @@
           с гигантским наличием, красивыми магазинами и лучшим персоналом в городе. </p>
 
       </div>
-      <div class="col-md-4">
+      <div class="col-md-12 col-lg-4">
         <div class="big-number bottom-line bottom-line--big-number">2008</div>
         <div class="chains-stores__opening">
           Год открытия первого
@@ -195,7 +195,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-8">
+      <div class="col-md-6 col-lg-8">
         <div class="chains-stores__slider">
           <img src="" alt="фото" width="165">
           <img src="" alt="фото" width="165">
@@ -203,7 +203,7 @@
           <img src="" alt="фото" width="165">
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6 col-lg-4">
         <div class="chains-stores__video">
           <img src="./img/video1.jpg" alt="video" width="350">
           <a href="https://www.youtube.com/watch?v=cHq99TbnKCI" class="popup-youtube chains-stores__video-title">История
@@ -244,7 +244,7 @@
       </div>
     </div>
     <div class="row pt-15 pt-md-5">
-      <div class="col-md-6">
+      <div class="col-md-10 offset-md-1 col-lg-6">
         <div class="essence__video">
           <img src="/img/video2.jpg" alt="видео" width="540">
           <a href="https://www.youtube.com/watch?v=cHq99TbnKCI" class="popup-youtube essence__video-lint">Коротко о
@@ -252,7 +252,7 @@
             Игорь Холмецкий</a>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-12 col-lg-6">
         <div class="essence__name-wrapper">
           <h3 class="essence__name">Игорь
             Холмецкий</h3>
@@ -287,7 +287,7 @@
 <section class="sell">
   <div class="container">
     <div class="row">
-      <div class="col-12 col-md-3">
+      <div class="col-12 col-lg-3">
         <div class="sell__numder">
           97<span>%</span>
         </div>
@@ -295,7 +295,7 @@
           можно купить в «Руле»
         </div>
       </div>
-      <div class="col-md-9 sell__right-col">
+      <div class="col-lg-9 sell__right-col">
         <h2 class="bottom-line sell__title">Что мы продаем?</h2>
         <p class="subtitle">
           Мы торгуем автозапчастями для иномарок всех популярных моделей и не ограничиваемся сегментом
@@ -307,7 +307,7 @@
       </div>
     </div>
     <div class="row sell-footer">
-      <div class="col-12 col-md-3">
+      <div class="col-12 col-lg-3">
         <div class="sell-footer__title">
           «Руль» мульти-брендовый
           магазин автозапчастей
@@ -317,7 +317,7 @@
           Наш сайт: <a href="#" class="sell-footer__site-link">rul-online.ru</a>
         </div>
       </div>
-      <div class="col-12 col-md-9">
+      <div class="col-12 col-lg-9">
         <div class="sell-footer__list row">
           <div class="col-6 col-md-2 sell-footer-item">
             <img class="sell-footer-item__img" src="./img/shell/shell1.svg" alt="картинка">
@@ -489,21 +489,21 @@
 <section class="installation">
   <div class="container">
     <div class="row installation-top">
-      <div class="col-md-8 installation-top__left-col">
+      <div class="col-lg-8 installation-top__left-col">
         <h3>Поставим и смонтируем все
           необходимое для открытия магазина</h3>
         <p>Кроме этого, после успешных переговоров и подписания документов, мы разработаем
           планировочное решение торгового зала и склада. </p>
 
       </div>
-      <div class="col-md-4 installation-top__right-col">
+      <div class="col-lg-4 installation-top__right-col">
         <h3 class="pb-30 ">Вы получите свой
           магазин «Под ключ»</h3>
-        <button class="d-none d-md-block" data-toggle="modal" data-target="#join">Запросить смету</button>
+        <button class="d-none d-lg-block" data-toggle="modal" data-target="#join">Запросить смету</button>
       </div>
     </div>
     <div class="row installation-bottom">
-      <div class="col-md-3">
+      <div class="col-md-6 col-lg-3">
         <h4>Все для обустройства торгового зала</h4>
         <ul class="installation__list">
           <li class="installation__item">Готовую зону ресепшн</li>
@@ -512,7 +512,7 @@
           <li class="installation__item">Витрины для запчастей</li>
         </ul>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-6 col-lg-3">
         <h4>Все для организации склада</h4>
         <ul class="installation__list">
           <li class="installation__item">Стеллажи для запчастей</li>
@@ -523,7 +523,7 @@
           <li class="installation__item">Оборудование для учета</li>
         </ul>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-6 col-lg-3">
         <h4>Техническое оснащение магазина</h4>
         <ul class="installation__list">
           <li class="installation__item">Компьютеры, телефоны</li>
@@ -535,7 +535,7 @@
           </li>
         </ul>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-6 col-lg-3">
         <h4>Безопасносноть
           вашего магазина</h4>
         <ul class="installation__list">
@@ -551,11 +551,11 @@
       </div>
     </div>
     <div class="row installation__buttons">
-      <div class="col-12 col-md-4 offset-0 offset-md-2 pl-sm-30 pr-sm-30">
+      <div class="col-12 col-md-6 col-lg-4 offset-0 offset-lg-2 pl-sm-30 pr-sm-30">
         <button class="ml-30 installation__btn" data-toggle="modal" data-target="#join">Запросить смету</button>
       </div>
-      <div class="col-md-4 d-none d-md-block">
-        <button class="btn-white mr-30" data-toggle="modal" data-target="#join">Узнать подробнее</button>
+      <div class="col-lg-4 col-md-6 d-none d-md-block">
+        <button class="installation__learn-more btn-white mr-30 mr-md-0" data-toggle="modal" data-target="#join">Узнать подробнее</button>
       </div>
     </div>
   </div>
@@ -752,10 +752,10 @@
       </div>
     </div>
     <div class="row pt-30 pt-sm-15">
-      <div class="col-md-5 ">
+      <div class="col-md-6 col-lg-5 ">
         <button class="presentation-btn" data-toggle="modal" data-target="#join">Заказать презентацию системы</button>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6 col-lg-4">
         <div class="presentation__condition">
           Доступно только для покупателей
           франшизы «Руль»
@@ -767,7 +767,7 @@
 <section class="personal">
   <div class="container">
     <div class="row">
-      <div class="col-12 col-md-8">
+      <div class="col-12 col-lg-8">
         <h2 class="bottom-line">
           Закроем раз и навсегда
           вопрос с персоналом
@@ -788,7 +788,7 @@
           подготовленный и отточенный для решения такой задачи. Но, тем не мнее, мы можем провести Skype-собеседование и
           набрать для вас «Команду мечты» на время старта. </p>
       </div>
-      <div class="col-12 col-md-4 personal-aside">
+      <div class="col-12 col-lg-4 personal-aside">
         <div class="personal-aside__wrapper">
           <h3>Обучим не только
             персонал, но и вас
@@ -879,7 +879,7 @@
 <div class="d-none d-md-block">
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-lg-6">
         <button class="ml-sm-1 pr-sm-1" data-toggle="modal" data-target="#join">Получить коммерческое предложение
         </button>
       </div>
@@ -898,12 +898,12 @@
 <section class="data-base">
   <div class="container">
     <div class="row">
-      <div class="col-md-9">
+      <div class="col-lg-9">
         <h2 class="bottom-line">Откроем для вас доступ
           в Эксклюзивную и ценнейшую
           Базу знаний «Руль»</h2>
       </div>
-      <div class="col-md-3 d-none d-md-block">
+      <div class="col-lg-3 d-none d-lg-block">
         <img src="/img/icons/lock-yellow.png" class="data-base__lock" alt="фото замка">
       </div>
     </div>
@@ -934,7 +934,7 @@
         </div>
       </div>
     </div>
-    <div class="row pt-30 d-none d-md-flex">
+    <div class="row pt-30 d-none d-lg-flex">
       <div class="col-md-6 offset-2">
         <button data-toggle="modal" data-target="#join">Получить коммерческое предложение</button>
       </div>
@@ -1194,8 +1194,8 @@
 <div class="form pt-30">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 offset-0 offset-md-3">
-        <form id="contactForm">
+      <div class="col-lg-6 offset-0 offset-lg-3">
+        <form id="contactFormBottom">
           <p class="text-center mb-30">Отправьте заявку на получение подробного коммерческого предложения, мы вышлем вам
             смету на открытие магазинов в различных фарматах, с различными объемами инвестиций.</p>
           <div class="form-group">
@@ -1224,11 +1224,11 @@
           </div>
           <p class="text-left">
             <label>
-              <input form="contactForm" autocomplete="off" onclick="toggleButton('submitjoin', this)" type="checkbox">
+              <input form="contactFormBottom" autocomplete="off" onclick="toggleButton('submitjoinBottom', this)" type="checkbox">
               Отправляя сведения через электронную форму, Вы даете согласие на обработку Ваших персональных данных
             </label>
           </p>
-          <button id="submitjoin" class="form-btn" type="submit" disabled="disabled">Отправить заявку</button>
+          <button id="submitjoinBottom" class="form-btn" type="submit" disabled="disabled">Отправить заявку</button>
         </form>
       </div>
       <div class="col-md-10 offset-1 mt-30 form__description">
@@ -1340,8 +1340,8 @@
           </div>
           <div class="form-group">
             <div class="input-group">
-              <input id="promocode" name="promocode" type="text" class="form-control"
-                     placeholder="промо-код (если есть)">
+              <input id="city" name="city" type="text" class="form-control"
+                     placeholder="Страна(Город)">
               <div class="input-group-addon"><i class="fa fa-barcode fa-fw"></i></div>
             </div>
           </div>
