--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="css/magnific-popup.css" rel="stylesheet">
   <link href="css/slick-theme.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Exo+2:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;subset=cyrillic,latin-ext" rel="stylesheet">
 </head>
 <body>
 <header class="page-header">
@@ -228,7 +229,7 @@
     <div class="row">
       <div class="col-12"><h2 class="bottom-line">Суть бизнеса автозапчастей</h2></div>
     </div>
-    <div class="row pt-0 pt-md-3">
+    <div class="row">
       <div class="col-md-8">
         <p class="subtitle">По сути со стороны может показаться, что владение автомагазином это нечто похожее на
           стандартную схему: склад + точка продаж. Но вряд ли это можно назвать инвестиционным проектом, количество
@@ -243,8 +244,8 @@
         <div class="qote__subtitle">Остальное мы дадим!</div>
       </div>
     </div>
-    <div class="row pt-15 pt-md-5">
-      <div class="col-md-10 offset-md-1 col-lg-6">
+    <div class="row">
+      <div class="col-md-10 col-lg-6 pt-15">
         <div class="essence__video">
           <img src="/img/video2.jpg" alt="видео" width="540">
           <a href="https://www.youtube.com/watch?v=cHq99TbnKCI" class="popup-youtube essence__video-lint">Коротко о
@@ -261,7 +262,7 @@
               src="/img/icons/vk-social-logotype.svg" alt=""></a>
           </span>
         </div>
-        <p class="grey-text sm-text-black">Сооснователь и соучредитель сети фирменных
+        <p class="essence__name-description grey-text sm-text-black">Сооснователь и соучредитель сети фирменных
           магазинов автозапчастей «Руль», 31 год</p>
         <p class="essence__right-col-text">Правильная бизнес-стратегия за 8 лет превратила магазин с наличием 450 тысяч
           рублей в сеть магазинов с
