--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link href="css/magnific-popup.css" rel="stylesheet">
   <link href="css/slick-theme.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Exo+2:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;subset=cyrillic,latin-ext" rel="stylesheet">
 </head>
 <body>
 <header class="page-header">
@@ -241,10 +240,10 @@
         <div class="essence__qote">«Это не инвестиции
           — надо пахать»
         </div>
-        <div class="qote__subtitle">Остальное мы дадим!</div>
+        <div class="essence__qote-subtitle">Остальное мы дадим!</div>
       </div>
     </div>
-    <div class="row">
+    <div class="row pt-15">
       <div class="col-md-10 col-lg-6 pt-15">
         <div class="essence__video">
           <img src="/img/video2.jpg" alt="видео" width="540">
@@ -278,7 +277,7 @@
           <li class="essence__item">Участник ежегодных благотворительх марафонов.</li>
         </ul>
         <div class="d-flex flex-wrap justify-content-between flex-md-nowrap  pt-2">
-          <button class="essence__buttn" data-toggle="modal" data-target="#join">Хочу пахать</button>
+          <button class="essence__btn" data-toggle="modal" data-target="#join">Хочу пахать</button>
           <a href="#" type="tell" class="phone-number essence__phone-number phone-number--black">8 910 355-36-12</a>
         </div>
       </div>
@@ -397,7 +396,7 @@
         <p>Мы помогаем людям в разных жизненных сценариях: помочь своевременно с запчастями, автосервисам починить
           клиентский автомобиль, снабдив запчастями из наличия, а так же вовремя реагируем на новые автомобильные
           законы и людям это нравится, например, в 2017 году лидером по продажам был знак «Шипы» <span
-            class="icon">Ш</span> .</p>
+            class="icon-thorns"></span> .</p>
       </div>
     </div>
     <div class="row care-list">
@@ -449,11 +448,11 @@
           бизнес-счете предпринимателя. Давайте разберемся с основными аспектами нашего будущего сотрудничества:
         </p>
         <h3 class="left-square">Поможем с подбором помещения</h3>
-        <p class="subtitle pl-30">Со слов Чичваркина, основателя сети «Евросеть», залог успеха ритейла это: Location,
+        <p class="pl-30 pt-20">Со слов Чичваркина, основателя сети «Евросеть», залог успеха ритейла это: Location,
           location и … location. </p>
-        <p class="pl-30">Мы на собственном опыте знаем, как это важно и как будет тяжело, если совершить ошибку
+        <p class="pl-30 pt-10">Мы на собственном опыте знаем, как это важно и как будет тяжело, если совершить ошибку
           на старте, выбрав плохое место.</p>
-        <ul class="pt-30 pl-30">
+        <ul class="pt-20 pl-30">
           <li>Расскажем как правильно подобрать помещение</li>
           <li>Проведем аудит всех подобранных вами помещений</li>
           <li>Не дадим вам подписать документы на аренду с невыгодными условиями</li>
@@ -493,7 +492,7 @@
       <div class="col-lg-8 installation-top__left-col">
         <h3>Поставим и смонтируем все
           необходимое для открытия магазина</h3>
-        <p>Кроме этого, после успешных переговоров и подписания документов, мы разработаем
+        <p class="pl-30 pt-0">Кроме этого, после успешных переговоров и подписания документов, мы разработаем
           планировочное решение торгового зала и склада. </p>
 
       </div>
@@ -504,7 +503,7 @@
       </div>
     </div>
     <div class="row installation-bottom">
-      <div class="col-md-6 col-lg-3">
+      <div class="col-md-6 pl-30 col-lg-3">
         <h4>Все для обустройства торгового зала</h4>
         <ul class="installation__list">
           <li class="installation__item">Готовую зону ресепшн</li>
@@ -513,7 +512,7 @@
           <li class="installation__item">Витрины для запчастей</li>
         </ul>
       </div>
-      <div class="col-md-6 col-lg-3">
+      <div class="col-md-6 pl-30 col-lg-3">
         <h4>Все для организации склада</h4>
         <ul class="installation__list">
           <li class="installation__item">Стеллажи для запчастей</li>
@@ -524,7 +523,7 @@
           <li class="installation__item">Оборудование для учета</li>
         </ul>
       </div>
-      <div class="col-md-6 col-lg-3">
+      <div class="col-md-6 pl-30 col-lg-3">
         <h4>Техническое оснащение магазина</h4>
         <ul class="installation__list">
           <li class="installation__item">Компьютеры, телефоны</li>
@@ -536,7 +535,7 @@
           </li>
         </ul>
       </div>
-      <div class="col-md-6 col-lg-3">
+      <div class="col-md-6 pl-30 col-lg-3">
         <h4>Безопасносноть
           вашего магазина</h4>
         <ul class="installation__list">
@@ -563,7 +562,7 @@
 </section>
 <section class="technologies">
   <div class="container">
-    <div class="row pb-30">
+    <div class="row">
       <div class="col-md-8 pb-30">
         <h2 class="bottom-line">Даём наши передовые
           технологии вам!</h2>
@@ -721,7 +720,7 @@
 <section class="presentation">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-lg-10">
         <h2 class="bottom-line">Полная презентация системы</h2>
         <h3>
           Запросите полноценную презентацию системы,
@@ -773,16 +772,16 @@
           Закроем раз и навсегда
           вопрос с персоналом
         </h2>
-        <h3 class="left-square">Откроем серкет, как быстро найти
+        <h3 class="left-square left-square--personal">Откроем серкет, как быстро найти
           квалифицированный персонал</h3>
         <p class="pl-30">Мы знаем как быстро найти кандидатов на должность менеджеров, кладовщика. И главное, как найти
           квалифицированных кандидатов, которые и будут приносить вам прибыль. </p>
-        <h3 class="left-square">Поможем провести собеседование
+        <h3 class="left-square left-square--personal">Поможем провести собеседование
           с кандидатом и дать свои рекомендации</h3>
         <p class="pl-30">Понять насколько опытный кандидат пришел на собеседование поможет наш опросный лист, специально
           подготовленный и отточенный для решения такой задачи. Но, тем не менее, мы можем провести Skype-собеседование
           и набрать для вас «Команду мечты» на время старта. </p>
-        <h3 class="left-square">После набора «Команды мечты» мы
+        <h3 class="left-square left-square--personal">После набора «Команды мечты» мы
           пригласим вас вместе на обучение в наш
           тренинговый центр</h3>
         <p class="pl-30">Понять насколько опытный кандидат пришел на собеседование поможет наш опросный лист, специально
@@ -880,14 +879,14 @@
 <div class="d-none d-md-block">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6">
-        <button class="ml-sm-1 pr-sm-1" data-toggle="modal" data-target="#join">Получить коммерческое предложение
+      <div class="col-lg-6 offset-lg-1">
+        <button class="ml-sm-1 pr-sm-1 pr-lg-5" data-toggle="modal" data-target="#join">Получить коммерческое предложение
         </button>
       </div>
     </div>
   </div>
 </div>
-<div class="icons-row d-none d-md-block">
+<div class="icons-line d-none d-md-block pt-15">
   <div class="container ">
     <div class="row">
       <div class="col-12 icons">
@@ -906,6 +905,9 @@
       </div>
       <div class="col-lg-3 d-none d-lg-block">
         <img src="/img/icons/lock-yellow.png" class="data-base__lock" alt="фото замка">
+        <div class="login-wrapper">
+          <a href="#" class="login-link">Войти</a>
+        </div>
       </div>
     </div>
     <div class="row pt-30 pb-30">
@@ -935,13 +937,9 @@
         </div>
       </div>
     </div>
-    <div class="row pt-30 d-none d-lg-flex">
-      <div class="col-md-6 offset-2">
-        <button data-toggle="modal" data-target="#join">Получить коммерческое предложение</button>
-      </div>
-      <div class="col-md-4">
+    <div class="pt-30 d-none d-lg-flex">
+        <button data-toggle="modal" data-target="#join" class="data-base__btn">Получить коммерческое предложение</button>
         <a href="#" class="phone-number phone-number--black">8 910 355-36-12</a>
-      </div>
     </div>
   </div>
 </section>
@@ -976,7 +974,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-5 pl-30">
+      <div class="col-md-5 pl-15">
         <h3 class="audience__title">А это наша желанная
           целевая аудитория :)</h3>
         <p class="audience__subtitle">Мы работаем с владельцами иномарок и автосервисами.
@@ -1022,7 +1020,7 @@
     </div>
   </div>
 </section>
-<section class="plan pb-30 pt-30">
+<section class="plan pb-30">
   <div class="plan__top-wrapper">
     <div class="container">
       <div class="row">
@@ -1117,7 +1115,7 @@
           кладовщиков до руковдителя!
         </p>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 pt-15">
         <h3>Контрлируйте работу из любой точки мира</h3>
         <p class="font-italic">Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и
           ошибок в продаже
@@ -1192,7 +1190,7 @@
     </div>
   </div>
 </div>
-<div class="form pt-30">
+<div class="form">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 offset-0 offset-lg-3">
@@ -1302,8 +1300,8 @@
     <div class="row">
       <div class="col-md-4 page-footer__copyright">© 2008-2018 Сеть магазинов «Руль»</div>
       <div class="col-md-4 page-footer__privacy"><a href="">Политика конфеденциальности</a></div>
-      <div class="col-md-4 page-footer__development">Разработка сайта — Компания <a href="http://franch.guru/"
-                                                                                    target="_blank">«Бикселс»</a></div>
+      <div class="col-md-4 page-footer__development">Разработка сайта — <a href="http://franch.guru/"
+                                                                                    target="_blank">Компания «Бикселс»</a></div>
     </div>
   </div>
 </footer>
