--- a/index.html
+++ b/index.html
@@ -1032,6 +1032,7 @@
         </div>
       </div>
     </div>
+    <img src="/img/icons/yellow-borrom-bg.png" class="plan-bottom-bg" alt="">
     <div class="container">
       <div class="row">
         <div class="col-12 ">
